# klartext-dossier

./: .env  .gitattributes  .gitignore  .mailmap  LICENSE.md  Makefile  README.md  azure-pipelines.yml  build.sh  mkdocs.yml  namespaces.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: make-packages.yml  master-workflow.yml  publish-pages  publish-website.yml  pypeline-docker-image.yml
Documentation/: Dossier.mm
Documentation/Pitch/: Dossier.dm  Dossier.kt  image-xml-processing.graphml  slides.css  slides.less  transform.xslt
Documentation/Technical/: Specification.kt
Source/: setup.py
Source/dm/: __init__.py  __main__.py  context.py  diagram.py  exceptions.py  klartext.py  klartext_parser.py  markdown.py  (+7 more)
dm/: Makefile  README.md  setup.py
docker/: Dockerfile
docs/: index.html
dossier/: LICENSE.md  Makefile  setup.py
htmlbook/: Makefile  htmlbook-colors.less  htmlbook-counters.less  htmlbook-print.less  htmlbook-typography.less  htmlbook.less  mathml-default.css
klartext/: Makefile  mkdocs.yml  setup.py
klartext-pygments/: Makefile  pyproject.toml  test.kt
klartext-pygments/klartext-pygments/: klartext-lexer.py
klartext-pygments/klartext_pygments/: lexer.py
klartext-vscode/: Makefile  README.md  kt.tmLanguage.json  package.json  vsc-extension-quickstart.md
klartext_pygments/: Makefile  pyproject.toml  test.kt  tmate.json
klartext_pygments/src/: klartext-lexer.py
mdx/: LICENSE.md  Makefile  README.md  mkdocs.yml  setup.py
pypeline/: Dockerfile  README.md  requirements.txt
website/: index.md
(+639 files in other folders)
