[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klartext_pygments"
version = "0.1.0"
dependencies = ["pygments"]
#readme = "README.md"

[project.entry-points."pygments.lexers"]
klartext_pygments = "klartext-lexer:KlartextLexer"

[tool.hatch.envs.default.scripts]
test = "pygmentize -l klartext test.kt"

[tool.hatch.build.targets.wheel]
packages = ["src"]